2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Support $<...> alien tokens.
	* libpoke/libpoke.c (pk_set_alien_dtoken_fn): New function.
	* libpoke/pkl.c (struct pkl_compiler): New field alien_dtoken_fn.
	(pkl_alien_dtoken_fn): New function.
	(pkl_set_alien_dtoken_fn): Likewise.

2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Make sure the
	destination type of a cast to an array has a bounder.
	* libpoke/pkl-gen.c (pkl_gen_pr_type_array): Make sure the array
	type has a bounder in PKL_GEN_CTX_IN_TYPE context.
	* testsuite/poke.pkl/scons-72.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-05-16  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/pe.pk (PE_Name): //BASE64 is worse than I thought.
	* testsuite/poke.pickles/pe-test.pk: Update.

2023-05-16  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/Makefile.am (dist_pickles_DATA): Add base64.pk.

2023-05-16  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/base64.pk (base64_decode): Simplify.

2023-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/base64.pk (base64_decode): Quote characters are optional
	as per RFC.
	* testsuite/poke.pickles/pe-test.pk: Add tests for optional quote
	characters.
	* pickles/pe.pk (PE_Nam.get_offset): Simplify accordingly.

2023-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/coff.pk (COFF_File): Use pre-condition for optional
	field opt_hdr.

2023-05-14  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/base64.pk: New file.
	* testsuite/poke.pickles/base64-test.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
	* testsuite/poke.pickles/pe-test.pk: Add tests for PE names
	encoding and decoding.

2023-05-14  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pvm/pvm-insns-test.pk: Add tests for subi, subiu,
	subl and sublu.

2023-05-14  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pvm/pvm-insns-test.pk: Add tests for gei, geiu,